@@ -93,6 +93,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1060577: Extract list of RPM files from spec file in
+  bdist_rpm
+
 - Bug #1586613: fix zlib and bz2 codecs' incremental en/decoders.
 
 - Patch #1583880: fix tarfile's problems with long names and posix/
